--- a/style.css
+++ b/style.css
@@ -337,6 +337,10 @@ a {
   z-index: 5;
 }
 
+.mazda-actions {
+  display: none;
+}
+
 @media (min-width: 460px) {
   .image-container {
     height: 400px;
@@ -362,6 +366,9 @@ a {
 }
 
 @media (min-width: 1024px) {
+  .mazda-actions {
+    display: block;
+  }
   .title {
     width: 700px;
     margin-top: 218px;
@@ -539,7 +546,7 @@ a {
   }
 
   .saved-container {
-      border-left: 1px solid #f5f5f5;
+    border-left: 1px solid #f5f5f5;
   }
   .help-container {
     align-items: center;
@@ -556,7 +563,7 @@ a {
     height: 30px;
   }
   .p1 {
-    border-top: 1px solid #EEEEEE;
+    border-top: 1px solid #eeeeee;
     padding-top: 20px;
   }
 }
